criando tela para buscar canticos

--- a/JwPlayer.Wpf/JwPlayer.Wpf.csproj
+++ b/JwPlayer.Wpf/JwPlayer.Wpf.csproj
@@ -93,6 +93,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\JwPlayer\JwPlayer.csproj">
+      <Project>{bc661141-a6ba-4c25-ba49-4ed731afd5e0}</Project>
+      <Name>JwPlayer</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
